create a section and set responsive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portal CAT BKN</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -148,19 +149,79 @@
   </blockquote>
 </section>
 
-<!-- CONTACT -->
-<footer class="footer">
-  <div class="container">
-    <h3>Contact Us</h3>  
-    <p>Pusat Pengembangan Sistem Rekrutmen</p>
-    <p>📍 Jakarta Timur</p>
-    <p>📧 ppsr@bkn.go.id</p>
-    <p>📞 021-xxxxxxx</p>
-    <p class="copyright">
-      © 2025 Pusat Pengembangan Sistem Rekrutmen
-    </p>
+<!-- SECTION FOOTER -->
+<section class="section section-footer">
+
+  <!-- CONTACT US / FOOTER -->
+  <footer class="footer">
+    <div class="footer-container">
+
+      <!-- LEFT : MAP -->
+      <div class="footer-map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.0399830271417!2d106.86732362195126!3d-6.258463715955323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f2fe59c8be37%3A0x4091fed883ba7001!2sKantor%20Pusat%20Badan%20Kepegawaian%20Negara!5e0!3m2!1sid!2sid!4v1766542076886!5m2!1sid!2sid"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
+
+      <!-- RIGHT : CONTACT -->
+      <div class="footer-contact">
+        <h3>Contact Us</h3>
+        <h4>Pusat Pengembangan Sistem Rekrutmen</h4>
+
+        <ul class="contact-list">
+          <li>
+            <i class="fas fa-location-dot"></i>
+            <span>
+              Jl. Mayor Jenderal Sutoyo No.12<br>
+              Kel. Cililitan, Kec. Kramat Jati<br>
+              Kota Jakarta Timur
+            </span>
+          </li>
+
+          <li>
+            <i class="fas fa-envelope"></i>
+            <span>ppsr@bkn.go.id</span>
+          </li>
+
+          <li>
+            <i class="fas fa-phone"></i>
+            <span>+1 5589 55488 55</span>
+          </li>
+        </ul>
+
+        <!-- SOCIAL MEDIA -->
+        <div class="footer-social">
+          <a href="#" class="social web" aria-label="Website">
+            <i class="fas fa-globe"></i>
+          </a>
+          <a href="#" class="social facebook" aria-label="Facebook">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="#" class="social instagram" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="#" class="social twitter" aria-label="Twitter">
+            <i class="fab fa-x-twitter"></i>
+          </a>
+          <a href="#" class="social youtube" aria-label="YouTube">
+            <i class="fab fa-youtube"></i>
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </footer>
+
+</section>
+
+  <!-- COPYRIGHT -->
+  <div class="footer-bottom">
+    © 2025 Copyright Pusat Pengembangan Sistem Rekrutmen. All Rights Reserved
   </div>
-</footer>
+
 
 </body>
 </html>
